# RKM

./: README.md  dune-project  rkm.opam
.github/workflows/: build.yml
lib/: Ast.ml  ConvCase.ml  Core.ml  Driver.ml  Eval.ml  Expr.ml  Lexer.mll  Parser.ml  Parser.mly  Sem.ml  Solver.ml  Type.ml  VarInfo.ml  dune  lexer.ml  parser.messages
test/: GenAst.ml  GenExpr.ml  GenKind.ml  Test.ml  ctors.exp  ctors.in  dune  expr_prec.exp  expr_prec.in  let_offside.exp  let_offside.in  match_offside.exp  match_offside.in  pat_prec.exp  pat_prec.in  test-parser  top_offside.exp  top_offside.in  type_annot.exp  type_annot.in
test/expr/: bindings.t  ctor_tinf.t  generalize.t  illegal_type.t  illegal_undef.t  imperative.t  pattern_cap.t  recval.t  scoped_tv.t  traits.t
test/parser/: ctors.t  expr_prec.t  let_offside.t  match_offside.t  pat_prec.t  top_offside.t  type_annot.t
test/type-alias/: builtins.t  data_decl.t  illegal_dupdef.t  illegal_fv.t  illegal_kinds.t  illegal_partial_alias.t  nonrec.t  poly_alias.t  recblock.t
