(executable
 (public_name GenAst)
 (modules GenAst)
 (libraries rkm))

(executable
 (public_name GenKind)
 (modules GenKind)
 (libraries rkm))

(executable
 (public_name GenExpr)
 (modules GenExpr)
 (libraries rkm))

(cram
 (applies_to :whole_subtree)
 (deps %{bin:GenAst} %{bin:GenKind} %{bin:GenExpr}))